# XLab-UUV

./: .gitignore  README.md
provisioning/: pyproject.toml  setup.py
provisioning/xluuv/: main.py  provisioning.py  tmux.py
provisioning/xluuv/components/: bridge_command.py  ccc.py  component.py  mininet.py  ot.py
provisioning/xluuv/window_layouts/: __init__.py  config.py  layout.py  util.py  windows.py
vms/bc/: .gitignore  README.md  Vagrantfile  bc5-ext.ini
vms/bc/ansible/: bcbuild.yml  bcdependencies.yml
vms/bc/bc/src/: AIS.cpp  AIS.hpp  AIVDMSender.cpp  AIVDMSender.hpp  Angles.hpp  Autopilot.cpp  Autopilot.hpp  CMakeLists.txt  Camera.cpp  Constants.hpp  FFTWave.hpp  GUIMain.cpp  MovingWater.cpp  MovingWater.hpp  NMEA.cpp  NMEA.hpp  NMEASentences.hpp  NetworkController.cpp  NetworkController.hpp  OwnShip.cpp  OwnShip.hpp  ScenarioChoice.hpp  Ship.hpp  SimulationModel.cpp  SimulationModel.hpp  Water.cpp  Water.hpp  main.cpp
vms/bc/scripts/: tunnel-10112.sh  tunnel-10113.sh  tunnel-10114.sh  tunnel.py
vms/ccc/: .gitignore  README.md  Vagrantfile  pyproject.toml
vms/ccc/ansible/: ccc.yml  opencpn.yml  vlc.yml  wireshark.yml
vms/ccc/examples/: create_zips.py
vms/ccc/examples/dive_procedures/: SantaCatalina_03.json  SimpleEstuary_04.json  surface.json
vms/ccc/examples/loiter_positions/: SantaCatalina_02.json  SantaCatalina_05.json  SantaCatalina_07.json  SimpleEstuary_03.json  SimpleEstuary_06.json  SimpleEstuary_10.json
vms/ccc/examples/missions/: SantaCatalina.json  SimpleEstuary.json
vms/ccc/examples/routes/: SantaCatalina_01.gpx  SantaCatalina_04.gpx  SimpleEstuary_01.gpx  SimpleEstuary_02.gpx  SimpleEstuary_05.gpx  SimpleEstuary_08.gpx  SimpleEstuary_09.gpx
vms/ccc/opencpn/: opencpn.conf  tunnel.sh
vms/ccc/opencpn/Charts/: SimpleEstuary.kap
vms/ccc/tests/: test_parsers.py
vms/ccc/tests/snapshots/: test-loiter-sharedwpviz.gpx  test-loiter.gpx
vms/ccc/xluuv_ccc/: nmea.py  utils.py
vms/ccc/xluuv_ccc/client/: cccgui.kv  cli.py  client.py  formatting.py  gui.py
vms/ccc/xluuv_ccc/marmaths/: __init__.py  constants.py
vms/ccc/xluuv_ccc/server/: cccserver_servicer.py  nmea_client.py  server.py  telemetry.py  xluuv_client.py  xluuv_state.py
vms/mininet/: .gitignore  Vagrantfile  mininet.patch  network.py  openflow.patch  setup.py
vms/mininet/ansible/: dds.yml  gui.yml  hsr.yml  mininet.yml  opendds.yml  resizefs.yml  smcroute.yml  vlc.yml
vms/mininet/scripts/: autopilot-debug.sh  autopilot.sh  ccc-debug.sh  ccc.sh  net-traffic.py
vms/mininet/xluuv_net/: hsr.py  macsec.py  nat.py  tclink.py  util.py  vlan.py
vms/ot/: Vagrantfile
vms/ot/ansible/: dds.yml  opendds.yml  setup-os.yml
vms/ot/support/: bc-proxy-akt-debug.sh  bc-proxy-akt.sh  bc-proxy-sen-debug.sh  bc-proxy-sen.sh  os_sched.h  os_sem.h  platform_freebsd.GNU
vms/utils/: timezone.yml
vms/utils/dds/: .gitignore  README.md  messages.proto  rtps.ini
vms/utils/dds/src/: Autopilot.idl  BcProxyMessages.h  CMakeLists.txt  PhysicalState.idl
vms/utils/dds/src/autopilot/: AivdmMessageDRLImpl.cpp  AivdmMessageDRLImpl.h  AutopilotCommandDRLImpl.cpp  AutopilotCommandDRLImpl.h  AutopilotController.cpp  AutopilotController.h  DiveProcedureDRLImpl.cpp  DiveProcedureDRLImpl.h  LoiterPositionDRLImpl.cpp  LoiterPositionDRLImpl.h  Main.cpp  Marmaths.h  MissionCommandDRLImpl.cpp  MissionCommandDRLImpl.h  MissionController.cpp  MissionController.h  MissionDRLImpl.cpp  MissionDRLImpl.h  PidController.cpp  PidController.h  ProcedureActivationDRLImpl.cpp  ProcedureActivationDRLImpl.h  RouteDRLImpl.cpp  RouteDRLImpl.h  SensorsDRLImpl.cpp  SensorsDRLImpl.h
vms/utils/dds/src/bcactproxy/: ActuatorsDRLImpl.cpp  ActuatorsDRLImpl.h  Main.cpp
vms/utils/dds/src/bcsenproxy/: AisWorker.cpp  AisWorker.h  Main.cpp  SenWorker.cpp  SenWorker.h
vms/utils/dds/src/cccproxy/: APReportDRLImpl.cpp  APReportDRLImpl.h  ActuatorsDRLImpl.cpp  ActuatorsDRLImpl.h  AivdmMessageDRLImpl.cpp  AivdmMessageDRLImpl.h  ColregStatusDRLImpl.cpp  ColregStatusDRLImpl.h  Main.cpp  MissionReportDRLImpl.cpp  MissionReportDRLImpl.h  SensorsDRLImpl.cpp  SensorsDRLImpl.h  XLUUVServiceImpl.cpp  XLUUVServiceImpl.h
vms/utils/opencpn/: monitor_opencpn.sh
vms/utils/rov/: video-display.sh  video-sender.sh  video.mkv
vms/utils/vpn/: bridge-start  bridge-stop  client.conf  client.sh  server.conf  server.sh  wait.sh
vms/utils/vpn/certs/: ca.crl  ca.crt  ca.key  client-dsa.crt  client-dsa.key  client-ec.crt  client-ec.key  client-pass.key  client-revoked.crt  client-revoked.key  client.crt  client.key  client.p12  dh2048.pem  gen-sample-keys.sh  server-dsa.crt  server-dsa.key  server-ec.crt  server-ec.key  server.crt  server.key  ta.key
